
Endless Eclipse
* Progenitor Saetos
** New: UTID updated.
* Juntun
** New: UTID udpated.
* Ebassi
** New: UTID updated.
* Arebus
** New: UTID udpated.
* Rhu'Megar
** New: UTID updated.
* Matriach of Pestilence
** New: Added Personal Alert for Necrotic Spores
** New: Added Personal Alert for Volatile Infection

Frozen Tempest
*  Artifex Zaviel
** New: Enrage timer added for 7 minutes.
* Kolmasveli and Toinenveli
** New: Enrage timer added for 7 minutes.
** New: Tank-Swap enabled for both Ire debuffs.
** New: Added Alert for Kolmasveli's Glimpse of Infinity channel. (Verbose "Hide from Kolmasveli!")
** New: Added Alert for Toinenveli's Glimpse of Infinity channel. (Verbose "Hide from Toinenveli!")
** New: Enabled new Multi-Tank Aggro feature in Tank-Swap.
** New: Added Personal Alert and Mechanic Spy for Sparking Eruption.
** New: Added Alert and Stop Trigger for Energy Vortex casting Tempest Flare.
** New: Added a Castbar for Energy Vortex.
** New: Added Unit Tracking for Energy Vortex.
** Change: This encounter will now correctly trigger a victory only after both bosses have died, not just Kolmasveli.
** New: Added a persistent Castbar for Toinenveli.
** New: Phase Tracking for 50%, 30% and 10% added for both bosses. Intiatial system, may be revised.

Triumph of the Dragon Queen
* Grand Falconer Zoles
** Fixed: Should now return the correct Unit Object during new add spawns.

Experts
Empyrean Core
* Baird Bringhurst
** New: Enrage timer added for 13.5 minutes.

Tower of the Shattered
* Psychophage Primakov
** New: Enrage timer added for 8 mintues (Estimate)

Unhallowed Boneforge
* Necrotic Throne
** Fixed: Phase Monitor should now correctly track at least the two active thrones correctly.

----
v1.3.8

* Percentage Monitor
** Fixed: UnitID Percent refence object error. (2962)

Storm Legion

Endless Eclipse
* New: Regulos Template
* Progenitor Saetos
** New: Added 4 additional units for ID capture and encounter launching.
** Fixed: Corrected name.

Frozen Tempest